--- a/Client/src/pages/Register/register.css
+++ b/Client/src/pages/Register/register.css
@@ -1,12 +1,16 @@
 .register-main {
     width: 100%;
     padding: 1rem;
-    min-height: 100dvh;
+    min-height: 100%;
 
     background: linear-gradient(to bottom right, #111827, #1f2937, #000000);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    position: absolute;
+    top: 0;
+    right: 0;
 
     display: grid;
     place-content: center;
